plugins {
    id 'application'
    id 'idea'
    id 'java'
    id 'maven'
    id 'it.tellnet.sass' version '1.2'
    id 'com.github.johnrengelman.shadow' version '4.0.2'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'com.uddernetworks.emojimanager'
version '1.0.0-SNAPSHOT'

sourceCompatibility = 11

mainClassName = 'com.uddernetworks.emojimanager.JFXWorkaround'

sass {
    sassDir = 'src/main/resources'
    cssDir = 'src/main/resources'
}

repositories {
    mavenCentral()
    jcenter()
}

configurations {
    javafxCompile
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'commons-io:commons-io:2.6'
    implementation 'org.ocpsoft.prettytime:prettytime:4.0.2.Final'
    implementation 'com.electronwill.night-config:hocon:3.6.0'

    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'org.slf4j:slf4j-log4j12:1.7.25'

    implementation 'net.dv8tion:JDA:4.BETA.0_32'

    implementation 'com.zaxxer:HikariCP:2.7.8'
    implementation 'mysql:mysql-connector-java:5.1.6'
    implementation 'org.hsqldb:hsqldb:2.4.1'

    implementation 'org.jfxtras:jmetro:11.5.8'
    implementation 'org.controlsfx:controlsfx:11.0.0'

    javafxCompile 'org.openjfx:javafx-base:12.0.1:win'
    javafxCompile 'org.openjfx:javafx-graphics:12.0.1:win'
    javafxCompile 'org.openjfx:javafx-controls:12.0.1:win'
    javafxCompile 'org.openjfx:javafx-fxml:12.0.1:win'

    compile configurations.javafxCompile
}

run {
    environment.putAll([
    ])

    jvmArgs("--illegal-access=deny")
    jvmArgs("--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED")
    jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED")
    jvmArgs("--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED")
}

task replaceStuff {
    doLast {
        println 'SCSS Replace'
        ant.replaceregexp(match: '@charset "UTF-8";', replace: '') {
            fileset(dir: 'src/main/resources', includes: '*.css')
        }
    }
}

compileJava.dependsOn sassCompile
sassCompile.finalizedBy replaceStuff
